--- a/HW-02_Maze/HW-02_Maze.csproj
+++ b/HW-02_Maze/HW-02_Maze.csproj
@@ -61,17 +61,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -80,6 +81,24 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\hall.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\pics\enemy.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\pics\hall.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\pics\medal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\pics\player.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\pics\wall.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
